--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+
 html, body {
   box-sizing: border-box;
   margin: 0;
@@ -10,14 +12,14 @@ body {
   }
 
   #image {
-    padding-top: 30px;
+    padding-top: 2.5rem;
     text-align: center;
   }
 
   #text { 
     text-align: center;
     color: wheat;
-    font-family: sans-serif; 
+    font-family: 'Titillium Web', sans-serif;
     color: white;
     background-image: linear-gradient(0.25turn, );
   }
