--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ html, body {
   height: 100%
 }
 body {
+    width: 100%;
     height: 100%;
     background-image: linear-gradient(0.25turn, #1D4581, #3C1C75);
   }
@@ -16,12 +17,17 @@ body {
     text-align: center;
   }
 
+  #image img {
+    border-radius: 15%;
+  }
+
   #text { 
     text-align: center;
     color: wheat;
     font-family: 'Titillium Web', sans-serif;
     color: white;
-    background-image: linear-gradient(0.25turn, );
+    min-width: 100px;
+    width: auto;
   }
 
   a, a:visited {
